# panout

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.claude/commands/: build.md  code_review.md  planout.md  sumup.md  test.md
.claude/specs/: multi-window-bundles.md
.claude/sum/: panout-implementation.md  panssh-design-session.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-release-infrastructure/: 01-01-SUMMARY.md
.planning/phases/02-remote-tmux-sessions/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
assets/: workspace-example.mov
examples/: config.toml
src/: cli.rs  config.rs  error.rs  interpolate.rs  lib.rs  loader.rs  main.rs  resolver.rs  session.rs  ssh.rs  tmux.rs
